--- a/kiemtra1/baikiemtra.ipynb
+++ b/kiemtra1/baikiemtra.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,13 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dữ liệu đã được lưu thành công.\n",
       "       Name  Age Salary\n",
       "0     Alice   25  50000\n",
       "1       Bob   30  60000\n",
@@ -70,6 +71,11 @@
     }
    ],
    "source": [
+    "try:\n",
+    "    df.to_csv('data_bai_kiem_tra_so1.csv', index=False)\n",
+    "    print(\"Dữ liệu đã được lưu thành công.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Lỗi khi lưu dữ liệu: {e}\")\n",
     "print(df)"
    ]
   },
